# AI-LogMind

./: .gitignore  CMakeLists.txt  README.md
.opencode/: AGENTS.md
.opencode/roles/: architect.md  dev-a.md  dev-b.md  plan-a.md  plan-b.md  req-a.md  req-b.md  test-a.md  test-b.md
cmake/: CompilerSettings.cmake  PluginScan.cmake  riscv64-toolchain.cmake
docs/: ARCHITECTURE.md  logmind-daemon.service  产品需求PRD.md  修复方案与更新日志.md  开发编码文档.md  模块技术方案.md  测试报告.md  项目最终验收报告.md
include/logmind/: alert.h  analyzer.h  collector.h  config_mgr.h  file_watcher.h  log_buffer.h  log_entry.h  pipeline.h  plugin.h  plugin_loader.h  vector_store.h  version.h
scripts/: inject_test_logs.sh
src/client/: CMakeLists.txt  dbus_client.cpp  dbus_client.h  main.cpp  main_window.cpp  main_window.h
src/client/models/: log_filter_model.cpp  log_filter_model.h  log_model.cpp  log_model.h
src/client/resources/: style.qss  style_light.qss
src/client/widgets/: alert_panel.cpp  alert_panel.h  dashboard_widget.cpp  dashboard_widget.h  log_detail_panel.cpp  log_detail_panel.h  log_view.cpp  log_view.h  plugin_panel.cpp  plugin_panel.h  search_bar.cpp  search_bar.h  status_bar_widget.cpp  status_bar_widget.h
src/daemon/: config_mgr.cpp  daemon_core.cpp  daemon_core.h  dbus_service.cpp  dbus_service.h  file_watcher.cpp  log_buffer.cpp  main.cpp  pipeline.cpp  plugin_api.cpp  plugin_loader.cpp  vector_store.cpp
tests/: CMakeLists.txt
tests/plugins/: mock_collector.cpp
tests/smoke/: smoke_test.cpp
tests/stress/: riscv_test.cpp  stress_test  stress_test.cpp  test_performance.sh  test_plugin_load_unload.sh  test_stability.sh
